# google-query-builder

./: README.md  pyproject.toml  requirements.txt
data/: google_search_operators.tsv
src/google_query_builder/: google.py
