[tool.poetry]
name = "google-query-builder"
version = "0.1.0"
description = ""
authors = ["sean <sean.li@vectorindex.cloud>"]
readme = "README.md"
packages = [{include = "google_query_builder", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
deep-translator = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
